casi termino la pagina

--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Adopcion</title>
+    <script src="assets/js/script.js" defer></script>
+    <title>Adopcion de Mascotas</title>
+
 </head>
 
 
 <body>
-    
-    
+  <header>
+   <h1 id="titulo-principal"> Adopta a un animal rescatado de la calle </h1>
+
+  </header>
+
+  <main>
+    <section>
+      <h2> Perro🐕</h2>
+      <article class="card">
+        <img src="assets/img/dog.jpg" alt="Perro Doki">
+        <h3> Doki </h3>
+        <button onclick="adoptar('Doki')">Adoptar</button>
+      </article>
+    </section>
+
+
+    <section>
+      <h2> Gato🐈</h2>
+      <article class="card">
+        <img src="assets/img/cat.jpg" alt="Gato Felix">
+        <h3> Felix </h3>
+        <button onclick="adoptar('Felix')">Adoptar</button>
+      </article>
+    </section>
+
+
+  </main>
+
+  <footer>
+    <p>&copy;;2025 Adopcion de Mascotas </p>
+  </footer>
 
 
 
-
-
-    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
