terminacion de la pagina

--- a/index.html
+++ b/index.html
@@ -2,49 +2,98 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js" defer></script>
-    <title>Adopcion de Mascotas</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/js/script.js" defer></script>
+  <title>Adopcion de Mascotas</title>
 
 </head>
 
 
 <body>
   <header>
-   <h1 id="titulo-principal"> Adopta a un animal rescatado de la calle </h1>
+    <h1 id="titulo-principal"> Adopta a un animal rescatado de la calle </h1>
 
   </header>
 
   <main>
+    <!-- Sección de perros -->
     <section>
-      <h2> Perro🐕</h2>
-      <article class="card">
-        <img src="assets/img/dog.jpg" alt="Perro Doki">
-        <h3> Doki </h3>
-        <button onclick="adoptar('Doki')">Adoptar</button>
-      </article>
+      <h2>Perros 🐕</h2>
+      <div class="contenedor">
+        <article class="card">
+          <img src="assets/img/Dog callejero.jpg" alt="Perro Doki">
+          <h3>Doki</h3>
+          <button onclick="adoptar('Doki')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/dog.jpg" alt="Perro Mati">
+          <h3>Mati</h3>
+          <button onclick="adoptar('Mati')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/golden cesar.jpg" alt="Perro Cesar">
+          <h3>Cesar</h3>
+          <button onclick="adoptar('Cesar')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/perro callejero.jpg" alt="Perro Tommy">
+          <h3>Tommy</h3>
+          <button onclick="adoptar('Cesar')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/bobydog.jpg" alt="Perro Boby">
+          <h3>Boby</h3>
+          <button onclick="adoptar('Cesar')">Adoptar</button>
+        </article>
+      </div>
     </section>
 
-
+    <!-- Sección de gatos -->
     <section>
-      <h2> Gato🐈</h2>
-      <article class="card">
-        <img src="assets/img/cat.jpg" alt="Gato Felix">
-        <h3> Felix </h3>
-        <button onclick="adoptar('Felix')">Adoptar</button>
-      </article>
+      <h2>Gatos 🐈</h2>
+      <div class="contenedor">
+        <article class="card">
+          <img src="assets/img/cat.jpg" alt="Gato Felix">
+          <h3>Felix</h3>
+          <button onclick="adoptar('Felix')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/cat callejero1.jpg" alt="Gato Tito">
+          <h3>Tito</h3>
+          <button onclick="adoptar('Tito')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/cat callejero2.jpg" alt="Gato Jimmy">
+          <h3>Jimmy</h3>
+          <button onclick="adoptar('Jimmy')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/cat callejero3.jpg" alt="Gato Seba">
+          <h3>Seba</h3>
+          <button onclick="adoptar('Seba')">Adoptar</button>
+        </article>
+
+        <article class="card">
+          <img src="assets/img/cat callejero4.jpg" alt="Gato Mai">
+          <h3>Mai</h3>
+          <button onclick="adoptar('Mai')">Adoptar</button>
+        </article>
+      </div>
     </section>
-
-
   </main>
 
   <footer>
     <p>&copy;;2025 Adopcion de Mascotas </p>
   </footer>
-
-
 
 </body>
 
