--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <main>
-    <!-- Sección de perros -->
+    <!-- Sección de los  perros -->
     <section>
       <h2>Perros 🐕</h2>
       <div class="contenedor">
@@ -54,7 +54,7 @@
       </div>
     </section>
 
-    <!-- Sección de gatos -->
+    <!-- Seccion de los gatos-->
     <section>
       <h2>Gatos 🐈</h2>
       <div class="contenedor">
