--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </main>
 
   <footer>
-    <p>&copy;;2025 Adopcion de Mascotas </p>
+    <p>&copy;2025 Adopcion de Mascotas </p>
   </footer>
 
 </body>
