CAMBIOS DL INDEX

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <article class="card">
           <img src="assets/img/perro callejero.jpg" alt="Perro Tommy">
           <h3>Tommy</h3>
-          <button onclick="adoptar('Cesar')">Adoptar</button>
+          <button onclick="adoptar('Tommy')">Adoptar</button>
         </article>
 
         <article class="card">
           <img src="assets/img/bobydog.jpg" alt="Perro Boby">
           <h3>Boby</h3>
-          <button onclick="adoptar('Cesar')">Adoptar</button>
+          <button onclick="adoptar('Boby')">Adoptar</button>
         </article>
       </div>
     </section>
